# luxoft-test-task

./: CMakeLists.txt  README.txt
cmocka-1.1.0/: CMakeLists.txt
cmocka-1.1.0/src/: CMakeLists.txt
cmocka-1.1.0/tests/: CMakeLists.txt
geometry/: geom_unit_test.c  geometry.c  geometry.h
mathematics/: math_unit_test.c  mathematics.c  mathematics.h
